--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-logPath = ${logPath:./}
+log.path = ${logPath:./}
+server.host = ${serverHost:mpk-server.herokuapp.com}
+server.port = ${serverPort:80}
