--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,14 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.1.8.RELEASE</version>
+        <version>2.3.1.RELEASE</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>Hoxton.SR11</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -87,6 +94,31 @@
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
       <version>3.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>nebula</groupId>
+      <artifactId>org.eclipse.nebula.paperclips.core_2.0.0.201504150758</artifactId>
+      <scope>system</scope>
+      <version>2.0.0.201504150758</version>
+      <systemPath>${basedir}/lib/org.eclipse.nebula.paperclips.core_2.0.0.201504150758.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>nebula</groupId>
+      <artifactId>org.eclipse.nebula.paperclips.widgets_2.0.0.201504150758</artifactId>
+      <scope>system</scope>
+      <version>2.0.0.201504150758</version>
+      <systemPath>${basedir}/lib/org.eclipse.nebula.paperclips.widgets_2.0.0.201504150758.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>nebula</groupId>
+      <artifactId>org.eclipse.nebula.widgets.gallery_0.6.0.201504150758</artifactId>
+      <scope>system</scope>
+      <version>2.0.0.201504150758</version>
+      <systemPath>${basedir}/lib/org.eclipse.nebula.widgets.gallery_0.6.0.201504150758.jar</systemPath>
     </dependency>
   </dependencies>
 
