--- a/pom.xml
+++ b/pom.xml
@@ -127,11 +127,10 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.8.1</version>
         <configuration>
-          <target>${java.version}</target>
-          <source>${java.version}</source>
           <encoding>UTF-8</encoding>
+          <release>11</release>
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
@@ -152,7 +151,7 @@
             <configuration>
               <classifier>spring-boot</classifier>
               <mainClass>
-                ru.x5.bo.control.ui.Launcher
+                ru.mpk.client.ui.Launcher
               </mainClass>
               <includeSystemScope>true</includeSystemScope>
             </configuration>
